Fixed content block overflow on mmobile

--- a/src/scss/components/site/_contentBlock.scss
+++ b/src/scss/components/site/_contentBlock.scss
@@ -7,7 +7,10 @@
     box-shadow: 4px 0 3px rgba(0,0,0,0.4);
     background: $colour__white;
 
-    @include phone { width: 100%; }
+    @include phone {
+        width: 100%; 
+        overflow: hidden;
+    }
 }
 
 .section__container {
